--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "jsonserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"json-server --watch db.json"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
